--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #171717;
   user-select: none;
+  transition: 2s;
 }
 h1{
-  margin-top: 200px;
+  margin-top: 170px;
   color: whitesmoke;
   font-size: 100px;
 }
@@ -15,4 +16,48 @@ h1{
 h4{
   color: white;
   font-size: 40px;
+}
+
+
+
+
+
+/* About Developer */
+.box{
+  
+  background-color: rgba(0, 0, 0, 0.582);
+  height: 30px;
+  width: 200px;
+  margin-bottom: 0%;
+  border-radius: 5px;
+  padding-top: 1px;
+  padding-bottom: 7px;
+}
+.abtdev{
+  margin-top: 0%;
+  color: rgb(146, 146, 146);
+  font-family: Arial, Helvetica, sans-serif;  
+}
+.abtdev img{
+  margin-left: 20px;
+  padding-top: 6px;
+}
+
+
+.textt{
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+
+
+/* footer */
+.abtdeveloper{
+  display: grid;
+  place-content: center;
+  float: left;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
